--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ mapping_version=1.20.1
 ## Mod Properties
 mod_id=soul_cages
 mod_name=Soul Cages
-mod_license=GNU General Purpose License v3 (GPLv3)
+mod_license=GNU General Public License v3 (GPLv3)
 mod_version=1.20.1-1.0.1
 mod_group_id=lemon_juice.soul_cages
 mod_authors=Lemon_Juiced & Scalar Team
